--- a/public/index.html
+++ b/public/index.html
@@ -89,18 +89,18 @@
                         <span class="status-circle closed" id="status-indicator"></span>
                         <span id="status-text" class="ml-2 font-semibold">CLOSED</span>
                     </div>
-                    <div class="mb-2">
+                    <!-- <div class="mb-2">
                         <span class="font-medium text-gray-700">Solicitudes exitosas:</span> 
                         <span id="success-count" class="ml-2"></span>
-                    </div>
+                    </div> -->
                     <div class="mb-2">
                         <span class="font-medium text-gray-700">Solicitudes fallidas:</span> 
                         <span id="failure-count" class="ml-2"></span>
                     </div>
-                    <div class="mb-2">
+                    <!-- <div class="mb-2">
                         <span class="font-medium text-gray-700">Ratio de errores:</span> 
                         <span id="failure-rate" class="ml-2"></span>
-                    </div>
+                    </div> -->
                     <div class="mb-2">
                         <span class="font-medium text-gray-700">Último cambio de estado:</span> 
                         <span id="last-state-change" class="ml-2"></span>
